--- a/signup.html
+++ b/signup.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home | Questioner</title>
+  <title>Sign In | Questioner</title>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
-<body class="">
+<body>
 
   <nav class="navbar navbar-fixed-top navbar-toggleable-sm navbar-inverse bg-primary mb-3">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
@@ -37,50 +37,49 @@
     </div>
   </nav>
   <div class="container-fluid" id="main">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-3 col-md-2"></div>
-        <div class="col-lg-6 col-md-8 login-box">
+    <div class="container-fluid" id="main">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-2"></div>
+          <div class="col-lg-6 col-md-8 login-box">
 
-          <div class="col-lg-12 login-form">
             <div class="col-lg-12 login-form">
-              <form>
-                <div class="text-center">
-                  <h1>Signup
-
-                  </h1>
-                </div>
-                <div class="form-group">
-                  <label class="form-control-label">FIRST NAME</label>
-                  <input type="text" class="form-control" id="firstname" required>
-                </div>
-                <div class="form-group">
-                  <label class="form-control-label">LAST NAME</label>
-                  <input type="password" class="form-control" id="lastname" required>
-                </div>
-                <div class="form-group">
-                  <label class="form-control-label">ADDRESS</label>
-                  <input type="text" class="form-control" id="address" required>
-                </div>
-                <div class="form-group">
-                  <label class="form-control-label">PHONE NUMBER</label>
-                  <input type="password" class="form-control" id="phonenumber" required>
-                </div>
-                <div class="checkbox mb-3">
-                  <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                  </label>
-                </div>
-                <div class="col-lg-12">
-                  <div class="col-lg-6 login-btm login-text">
-                    <!-- Error Message -->
+              <div class="col-lg-12 login-form">
+                <form>
+                  <div class="text-center">
+                    <h1>Sign Up</h1>
                   </div>
-                  <div class=" text-center">
-                    <button type="submit" class="btn btn-outline-primary btntext" id="signup">SIGN UP</button>
+                  <div class="form-group">
+                    <label class="form-control-label">FIRST NAME</label>
+                    <input type="text" class="form-control">
                   </div>
-                </div>
+                  <div class="form-group">
+                    <label class="form-control-label">LAST NAME</label>
+                    <input type="text" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <label class="form-control-label">EMAIL</label>
+                    <input type="email" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <label class="form-control-label">PASSWORD</label>
+                    <input type="password" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <label class="form-control-label">CONFIRM PASSWORD</label>
+                    <input type="password" class="form-control">
+                  </div>
 
-              </form>
+                  <div class="col-lg-12 loginbttm">
+                    <div class="col-lg-6 login-btm login-text">
+                      <!-- Error Message -->
+                    </div>
+                    <div class="col-lg-6 login-btm login-button text-center">
+                      <button type="submit" class="btn btn-outline-primary">SIGN UP</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
