Fix: broken links

--- a/questions.html
+++ b/questions.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home | Questioner</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
@@ -87,6 +87,26 @@
                       <td>What is?</td>
                       <td>bootstrap</td>
                     </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>What is?</td>
+                      <td>bootstrap</td>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>What is?</td>
+                      <td>bootstrap</td>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>What is?</td>
+                      <td>bootstrap</td>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>What is?</td>
+                      <td>bootstrap</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -136,16 +156,16 @@
                 <label for="description">Description</label>
                 <input type="text" class="form-control" id="description" placeholder="Enter question description">
               </div>
-              <button type="submit" class="btn btn-primary">Add</button>
+              <button id="add-question" type="submit" class="btn btn-primary">Add</button>
             </form>
           </div>
         </div>
       </div>
     </div>
     
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 
 
 
